# LANS

./: .env.example  .gitignore  .pre-commit-config.yaml  COGNITIVE_AMPLIFICATION_PROOF_COMPLETE.md  FRESH_LAUNCHER_COMPLETE.md  Makefile  README.md  cognitive_agents.py  demo_launcher.py  enhanced_cognitive_agents.py  lans_cli.py  lans_fresh_launcher.py  lans_hierarchical_executor.py  lans_model_router.py  lans_parallel_executor.py  lans_simple_launcher.py  requirements.txt
agent_core/: AIL manual  __init__.py  cli.py  intelligent_cli.py  intelligent_coordinator.py  lans_context.py  simple_agentos.py  simple_ail_coordinator.py
docs/: README.md
documentation/: ATOMIC_CODE_STUDY_TODO.md  CODEBASE_STUDY_TODO.md  CODE_ANALYSIS_ISSUES_REPORT.md  GUI_TERMINAL_DESIGN.md  LANS_ICE_DESIGN.md  LANS_ICE_IMPLEMENTATION.md  LANS_ICE_TODO.md  LANS_RENAMING_STRATEGY.md  PHASE2_FINAL_SUCCESS_REPORT.md  PRODUCTION_CLEANUP_STRATEGY.md  PROJECT_COMPLETION_REPORT.md  REAL_AI_GMCP_BREAKTHROUGH_SUMMARY.md  TEST_RESULTS_SUMMARY.md  (+1 more)
ice/agent-host/: README.md  pyproject.toml  requirements.txt
ice/agent-host/lans_host/: __init__.py  main.py
ice/agent-host/lans_host/agent/: __init__.py  manager.py  memory.py
ice/agent-host/lans_host/context/: __init__.py  manager.py
ice/agent-host/lans_host/file_system/: __init__.py  operations.py  watcher.py
ice/agent-host/lans_host/security/: __init__.py  permissions.py
ice/agent-host/lans_host/terminal/: __init__.py  agent_command_bridge.py  manager.py.deprecated
ice/agent-host/lans_host/websocket/: __init__.py  events.py  manager.py
(+119 files in other folders)
